--- a/shoes-store/src/res/layout/shopPage.module.scss
+++ b/shoes-store/src/res/layout/shopPage.module.scss
@@ -13,6 +13,8 @@
 
 	.itemContainer {
 		margin: 0px auto;
+		height: 100%;
+		width: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: center;
